versioned_docs/version-0.10/reference/cli.mdx
---
title: Okteto CLI Reference
description: The Okteto Command Line Interface is a unified tool to manage your development containers
sidebar_label: Okteto CLI
id: cli
---

The Okteto Command Line Interface is a unified tool to manage your development containers.

## Synopsis

```console
$ okteto [options] <command> <subcommand> [parameters]
```

Use `okteto command --help` for information on a specific command. The synopsis for each command shows its parameters and their usage. Optional parameters are shown in square brackets.

Options | Values
:---|:---:
_--loglevel_ | _debug, info, warn, error_

 The amount of information outputted (defaults to _warn_).


## Available commands

### analytics

Enable / Disable analytics collection. Analytics are enabled by default

```console
$ okteto analytics [parameters]
```
Options | Description
:---|:---
_--disable_ | Disables analytic collection |

Okteto only collects information to help us understand how our users interact with the product. We don't collect any personally identifiable information.

When you use the okteto CLI, the following information is collected:
- The name of the action
- A timestamp of when it was run
- Your version of the CLI
- Your OS
- An anonymous machine ID  (we use https://github.com/denisbrodbeck/machineid for this)
- A user ID if you are currently logged in to https://cloud.okteto.com
- An action ID (to correlate multiple actions performed during a command's execution)

Please reach [out to us](mailto://hello@okteto.com) if you have any questions or concerns about the information collected.

### build

Build an image from a Dockerfile and push it to a registry:

```console
$ okteto build [PATH]
```

If your [okteto context](/docs/0.10/reference/cli/#context) points to Okteto Cloud or an Okteto Enterprise URL, images are built using the [Okteto Build Service](/docs/0.10/cloud/build/).
Otherwise, images are built using your local Docker daemon.

The following flags can be used (very similar to `docker build`):

Options | Type | Description
:---|:---:|:---
_--file_ | (string) | The path to the `Dockerfile` file |
_--tag_ | (string) | Name and optionally a tag in the `name:tag` format (it is automatically pushed) |
_--target_ | (string) | Set the target build stage to build |
_--no-cache_ | (bool) | Do not use cache when building the image (default: `false`)|
_--cache-from_ | (string) | Cache source image (optional) |
_--build-arg_ | (list) | Set build-time variables |
_--secret_ | (list) | Secret files exposed to the build. Format: `id=mysecret,src=/local/secret` |


### context

Set the default context.

A context is a group of cluster access parameters. Each context contains a Kubernetes cluster, a user, and a namespace.
The current context is the default cluster/namespace for any Okteto CLI command.

```console
$ okteto context
```

This will prompt you to select one of your existing contexts or to create a new one:

```console
A context defines the default cluster/namespace for any Okteto CLI command.
Select the context you want to use:
Use the arrow keys to navigate: ↓ ↑ → ←
  ▸ https://cloud.okteto.com (Okteto Cloud) *
    minikube
    staging
    production

    Create new context
```

Options | Type | Description
:---|:---:|:---
_--token_ | (string) | API token for authentication. Use this when scripting or if you don't want to use browser-based authentication. |
_--namespace_ | (string) | Namespace of your okteto context. |
_--builder_ | (string) | URL of the builder service |

When you run `okteto context`, an account will be created for your own `URL` if it's the first time you set the context in.
The CLI will exchange an authorization token with `URL` and save your API token and Okteto certificates information under `$HOME/.okteto/`.

#### Using Environment Variables to authenticate

Environment variables provide another way to specify your credentials. This is the recommended method when scripting tasks or when [creating preview environments](/docs/0.10/cloud/preview-environments/preview-environments).

The supported environment variables are:

- `OKTETO_TOKEN`: Specifies the [personal access token](/docs/0.10/cloud/personal-access-tokens) to use
- `OKTETO_URL`: Specifies the Okteto URL. If missing, it defaults to https://cloud.okteto.com

Available subcommands:

#### delete

Delete a context.

For example, to delete the Okteto Cloud context, run:

```console
$ okteto context delete https://cloud.okteto.com
```

#### list

List available contexts.

```console
$ okteto context list
```

```console
Name                                            Namespace  Builder                                 Registry
https://cloud.okteto.com *                      cindy      tcp://buildkit.cloud.okteto.net:1234    registry.cloud.okteto.net
minikube                                        default    docker                                  -
```

#### show

Print the current context.

```console
$ okteto context show
```

```console
{
  "name": "https://cloud.okteto.com",
  "token": "REDACTED",
  "namespace": "cindy",
  "builder": "tcp://buildkit.cloud.okteto.net:1234",
  "registry": "registry.cloud.okteto.net",
  "isOkteto": true
}
```

#### use

Set the default context.

```console
$ okteto context use
```

This will prompt you to select one of your existing contexts or to create a new one.

You can also specify an Okteto URL:

```console
$ okteto context use https://cloud.okteto.com
```

```console
 ✓  Using context cindy @ cloud.okteto.com
```

Or a Kubernetes context:

```console
$ okteto context use minikube
```

```console
 ✓  Using context default @ minikube
```

### doctor

Generates a doctor file with the okteto logs:

```console
$ okteto doctor
```

The `doctor` command should be run from the folder where you ran `okteto up`.

The doctor file contains:
- The `okteto.log`
- The syncthing logs of your development container
- A summary of your development container manifest
- A metadata file with information about your host machine's OS and architecture

The doctor file is a handy way to collect all the okteto logs. Use it when filing an issue or asking the Okteto community for help in the [#okteto](https://kubernetes.slack.com/messages/CM1QMQGS0/) channel in the [Kubernetes community Slack](http://slack.k8s.io/) when asking for assistance.

### down

Deactivates your development container, stops the file synchronization service, and restores your previous deployment configuration

```console
$ okteto down
```

The `down` command should be run from the same location as `okteto up`.

Options | Type | Description
:---|:---:|:---
_--file_ | (string) |  The path to the manifest file  (default "okteto.yml") |
<em className="no-wrap">--namespace</em> | (string) |  The Kubernetes namespace to use (defaults to the current kube config namespace) |
<em className="no-wrap">--context</em> | (string) |  The Kubernetes context to use (defaults to the current kube config context) |
_--volumes_  | (bool) | Remove persistent volumes where your local folder is synched on remote |


### exec

Executes the `COMMAND` in your development container. The command will fail if there's no active development container corresponding to the current folder

```console
$ okteto exec COMMAND
```

For more complex commands we recommend using a double dash (`--`) before the command parameter.

```console
okteto exec -- COMMAND
```

The `exec` command should be run from the same location as `okteto up`.

Options | Type | Description
:---|:---:|:---
_--file_ | (string) |  The path to the manifest file  (default "okteto.yml") |
<em className="no-wrap">--namespace</em> | (string) |  The Kubernetes namespace to use (defaults to the current kube config namespace) |
<em className="no-wrap">--context</em> | (string) |  The Kubernetes context to use (defaults to the current kube config context) |


### help

Displays the full help

```console
$ okteto help
```

### init

Automatically generates the okteto manifest file and a [`.stignore`](/docs/0.10/reference/file-synchronization#ignoring-files) file.
Okteto will scan the current folder and will generate a default manifest file based on your programming language and platform.

```console
$ okteto init
```

Options | Type | Description
:---|:---:|:---
_--file_ | (string) |  The path to the manifest file to create (default "okteto.yml") |


### kubeconfig

Download credentials for the Kubernetes cluster selected via `okteto context`.

```console
$ okteto kubeconfig
```

```console
 i  Updated kubernetes context 'cloud_okteto_com/cindy' in '/Users/cindy/.kube/config'
```

### login

Log into Okteto, and download your API token and certificates required to interact with the Okteto Build Service.
It defaults to [Okteto Cloud](https://cloud.okteto.com), but you can specify your own Okteto URL by specifying a `URL` argument.

```console
$ okteto login [URL]
```

Options | Type | Description
:---|:---:|:---
_--token_ | (string) | Your Okteto API token. Use this when scripting or if you don't want to use browser-based authentication. |

When you run `okteto login`, an account will be created for your own `URL` if it's the first time you log in.
The CLI will exchange an authorization token with `URL` and save your API token and Okteto certificates information under `$HOME/.okteto/`.

#### Using Environment Variables to authenticate

Environment variables provide another way to specify your credentials. This is the recommended method when scripting tasks or when [creating preview environments](/docs/0.10/cloud/preview-environments/preview-environments/).

The supported environment variables are:

- `OKTETO_TOKEN`: Specifies the [personal access token](/docs/0.10/cloud/personal-access-tokens/) to use
- `OKTETO_URL`: Specifies the URL of the Okteto instance to use. If missing, it defaults to *https://cloud.okteto.com*

### namespace

Configure the current namespace of the okteto context.

```console
$ okteto namespace cindy
```

```console
 ✓  Using context cindy @ cloud.okteto.com
```

`okteto namespace` with no argument prompts you to select one of your existing namespaces or to create a new one.

#### create

Create a namespace.

```console
$ okteto namespace create test-cindy
```

```console
 ✓  Namespace 'test-cindy' created
 ✓  Using context test-cindy @ cloud.okteto.com
```

#### delete

Delete a namespace.

```console
$ okteto namespace delete test-cindy
```

```console
 ✓  Namespace 'test-cindy' deleted
```

#### list

List existing namespace.

```console
$ okteto namespace list
```

```console
Namespace       Status
demos-cindy     Active
cindy *         Active
```

### pipeline

Pipeline management commands

```console
$  okteto pipeline [command]
```

Available subcommands:

#### deploy

Deploy your okteto pipeline

```console
$ okteto pipeline deploy
```

Run `okteto pipeline deploy` to automatically [start an Okteto pipeline](https://okteto.com/docs/cloud/okteto-pipeline/) for your `repository`. This is equivalent to clicking the `deploy` button on the Okteto UI and selecting the _Deploy from Git Repository_ option.

You need to be [logged in](/docs/0.10/reference/cli/#login) to Okteto before running this command.

##### Options

Options | Type | Description
:---|:---:|:---
_--branch_ | (string) | The branch to deploy (defaults to the main branch) |
_--file_ | (string) | The location of the pipeline file. If not set, the [automatic deployment](/docs/0.10/cloud/okteto-pipeline/) rules will be applied.
_--name_ | (string) | The name of the pipeline (defaults to the folder name) |
_--namespace_ | (string) | The Kubernetes namespace to use (defaults to the current kube config namespace)
_--repository_ | (string) | The HTTPS url of the repository to deploy (e.g. https://github.com/okteto/movies)
_--skip-if-exists_ | (bool) | Skip the pipeline deployment if the pipeline already exists in the namespace (defaults to `false`)
_--timeout_ | (duration) | The duration to wait for the pipeline to complete. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h  (default 5m0s)
_--var_ | (list) | Set a pipeline variable (can be set more than once)
_--wait_ | (bool) | Wait until the pipeline finishes (defaults to false)

#### destroy

Destroy your okteto pipeline

```console
$ okteto pipeline destroy
```

Run `okteto pipeline destroy` to automatically [destroy an existing pipeline in Okteto](https://okteto.com/docs/cloud/okteto-pipeline/). This is equivalent to clicking the `destroy` button on the Okteto UI.

You need to be [logged in](https://okteto.com/docs/reference/cli/#login) to Okteto before running this command.

##### Options

Options | Type | Description
:---|:---:|:---
_--name_ | (string) | The name of the pipeline (defaults to the folder name) |
_--namespace_ | (string) | The Kubernetes namespace to use (defaults to the current kube config namespace)
_--timeout_ | (string) | The duration to wait for the pipeline to be destroyed. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h  (default 5m0s)
_--volumes_ | (bool) | Destroy the persistent volumes created by the pipeline (defaults to false)
_--wait_ | (bool) | Wait until the pipeline is destroyed (defaults to false)

### preview

[Preview environment](https://okteto.com/docs/cloud/preview-environments/preview-environments/) management commands.

```console
$  okteto preview [command]
```

#### deploy

Deploy an okteto preview environment.

```console
$ okteto preview deploy [name]
```

Run `okteto preview deploy` to automatically deploy a preview environment for your application.

You need to be [logged in](/docs/0.10/reference/cli/#login) to Okteto before running this command.
Only users with [admin access](/docs/0.10/enterprise/administration/dashboard/) can deploy a global preview environment.

Options | Type | Description
:---|:---:|:---
_--branch_ | (string) | The branch to deploy (defaults to your current branch) |
_--file_ | (string) | The location of the pipeline file. If not set, the [automatic deployment](/docs/0.10/cloud/okteto-pipeline/) rules will be applied.
_--repository_ | (string) | The url of the repository to deploy (e.g. https://github.com/okteto/movies) (defaults to your current git configuration repo)
_--scope_ | (string) | The scope of preview environment to create. Accepted values are ['personal', 'global']. A personal preview environment can only be accessed by its creator, while in a global preview environment all cluster users can access it. (defaults to personal) |
_--sourceUrl_ | (string) | The HTTPS url of the pull/merge request to deploy.
_--timeout_ | (duration) | The duration to wait for the pipeline to complete. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h  (default 5m0s)
_--var_ | (list) | Set a pipeline variable (can be set more than once)
_--wait_ | (bool) | Wait until the pipeline finishes (defaults to false)

#### destroy

Destroy your okteto preview environment.

```console
$ okteto preview destroy [name]
```

Run `okteto preview destroy` to destroy a given preview environment.

You need to be [logged in](/docs/0.10/reference/cli/#login) to Okteto before running this command.
Only users with administration privileges can destroy a global preview environment.

#### endpoints

List the endpoints of a preview environment.

```console
$ okteto preview endpoints [name]
```

You need to be [logged in](/docs/0.10/reference/cli/#login) to Okteto before running this command.

Options | Type | Description
:---|:---:|:---
_--output_ | (string) | Output format. One of: ['json'] |

Output flag can be used to parse the endpoints and add them to your PR with a custom layout.

#### list

List all your okteto preview environments.

```console
$ okteto preview list
```

Run `okteto preview list` to get the status and scope of your preview environments.

You need to be [logged in](/docs/0.10/reference/cli/#login) to Okteto before running this command.


### push

Build, push, and redeploy your source code to Kubernetes

```console
$ okteto push
```

`okteto push` builds a new docker image, pushes it to the registry, and redeploys your containers.
If you have an active development container created by `okteto up`, it is also deactivated as part of the *push* operation.

If your [okteto context](/docs/0.10/reference/cli/#context) points to Okteto Cloud or an Okteto Enterprise URL, images are built using the [Okteto Build Service](/docs/0.10/cloud/build/).
Otherwise, images are built using your local Docker daemon.

Options | Type | Description
:---|:---:|:---
_--file_ | (string) | The path to the okteto manifest file. The manifest file indicates the deployment to push (default "okteto.yml") |
_--tag_ | (string) | The name of the image tag to build, push, and redeploy (defaults to the original container image but using the tag `okteto`) |
_--namespace_ | (string) | The Kubernetes namespace to use (defaults to the current kube config namespace) |
_--context_ | (string) |  The Kubernetes context to use (defaults to the current kube config context) |
_--no-cache_ | (bool) | Do not use cache when building the image |


### restart

Restarts your development pods corresponding to the `services` section of the okteto manifest.
This is useful to reload configurations that cannot be hot-reloaded.

```console
$ okteto restart
```

The `restart` command should be run from the same location than `okteto up`.

Options | Type | Description
:---|:---:|:---
_--file_ | (string) |  The path to the manifest file  (default "okteto.yml") |
_--namespace_ | (string) |  The Kubernetes namespace to use (defaults to the current kube config namespace) |
_--context_ | (string) |  The Kubernetes context to use (defaults to the current kube config context) |

### stack

Stack management commands

```console
$  okteto stack [command]
```

Available subcommands:

#### deploy

Deploy your stack

```console
$ okteto stack deploy
```

By default `okteto stack deploy` will create all the services defined in your [Stack manifest](/docs/0.10/reference/stacks/). If you only want to deploy a specific set of services, pass their names as arguments.

```console
$ okteto stack deploy [SERVICE...]
```

Once your Stack is deployed, you can run [`okteto up`](/docs/0.10/reference/cli/#up) against any of the Stack services as you do for any other Kubernetes deployment.

##### Options

Options | Type | Description
:---|:---:|:---
_--build_ | (bool) | Build images before starting any service (default `false`) |
_--file_ | (list) | Path to the stack manifest files (defaults to `okteto-stack.yml` or `.okteto/okteto-stack.yml`)  |
_--name_ | (string) | Overwrites the stack name |
_--namespace_ | (string) | The Kubernetes namespace to use (defaults to the current kube config namespace) |
_--context_ | (string) |  The Kubernetes context to use (defaults to the current kube config context) |
_--no-cache_ | (bool) | Do not use cache when building images |
_--wait_ | (bool) | Wait until a minimum number of containers are in a ready state for every service |

By default, Okteto reads two files, an `okteto-stack.yml` and an optional `okteto-stack.override.yml` file.
If both files exist, or if `--file` refers to a list of stack manifests, stack manifests are merged.
A manifest merge means any field defined in the second stack manifest replaces the value in the first stack manifest.

If your [okteto context](/docs/0.10/reference/cli/#context) points to Okteto Cloud or an Okteto Enterprise URL, images are built using the [Okteto Build Service](/docs/0.10/cloud/build/).
Otherwise, images are built using your local Docker daemon.

#### destroy

Destroy your stack

```console
$ okteto stack destroy
```

When you run `okteto stack destroy`, okteto will delete the services defined in your [Stack manifest](/docs/0.10/reference/stacks/).

Persistent volumes created by your stack are not deleted to avoid accidental data loss.
If you want to delete them, you can do it by executing `kubectl delete pvc $PVC_NAME`.

##### Options

Options | Type | Description
:---|:---:|:---
_--file_ | (list) | Path to the stack manifest files (defaults to `okteto-stack.yml` or `.okteto/okteto-stack.yml`)  |
_--name_ | (string) | Overwrites the stack name |
_--namespace_ | (string) | The Kubernetes namespace to use (defaults to the current kube config namespace) |
_--context_ | (string) |  The Kubernetes context to use (defaults to the current kube config context) |
_--volumes_ | (bool) | Destroy the persistent volumes created by the stack (defaults to `false`) |

By default, Okteto reads two files, an `okteto-stack.yml` and an optional `okteto-stack.override.yml` file.
If both files exist, or if `--file` refers to a list of stack manifests, stack manifests are merged.
A manifest merge means any field defined in the second manifest replaces the value in the first manifest.

### status

Status of the file synchronization process:

```console
$ okteto status --info
```

```console
 i  Local syncthing url: http://localhost:60539
 i  Remote syncthing url: http://localhost:60538
 i  Syncthing username: okteto
 i  Syncthing password: ac0ee34a-b1aa-4a41-bc67-cec3128b6cfd
 ✓  Synchronization status: 100.00%
```

The `status` command should be run from the same location than `okteto up`.

Options | Type | Description
:---|:---:|:---
_--file_ | (string) | The path to the manifest file (default "okteto.yml") |
_--namespace_ | (string) | The Kubernetes namespace to use (defaults to the current kube config namespace) |
_--context_ | (string) |  The Kubernetes context to use (defaults to the current kube config context) |
_--info_ | (bool) | Show syncthing links for troubleshooting the synchronization service |
_--watch_ | (bool) | Watch for changes |

### up

Activate your development container

```console
$ okteto up
```

When you run `okteto up`, okteto scales to zero the specified deployment and creates a mirror deployment. The mirror deployment is a copy of the original deployment manifest with the following development-time improvements:

- Okteto overrides the container-level configuration of the original deployment with the values defined in your [okteto manifest](/docs/0.10/reference/manifest/). A typical example of this is to replace the production container image with one that contains your development runtime.
- A bidirectional file [synchronization service](/docs/0.10/reference/file-synchronization/) is started to keep your changes up to date between your local filesystem and your development container.
- Automatic local and remote port forwarding using [SSH](/docs/0.10/reference/ssh-server/). This allows you to do things like access your cluster services via `localhost` or connect a remote debugger.
- A watcher service to keep the definition of the mirror deployment up to date with original deployment.

It's worth noting that your development deployment inherits the original deployment manifest definition.
Therefore, the development deployment uses the same service account, environment variables, secrets, volumes, sidecars, ... than the original deployment, providing a fully integrated development environment.

> Run [`okteto down`](#down) to restore your original deployment.

Options | Type | Description
:---|:---:|:---
_--file_ | (string) | The path to the manifest file (default "okteto.yml") |
_--namespace_ | (string) | The Kubernetes namespace to use (defaults to the current kube config namespace) |
_--context_ | (string) |  The Kubernetes context to use (defaults to the current kube config context) |
_--build_ | (bool) | Build on-the-fly the dev image using the info provided by the 'build' okteto manifest field |
_--pull_ | (bool) | Sets the `imagePullPolicy` to `Always` and forces the recreation of the dev environments |
_--reset_ | (bool) | Resets the file synchronization service. Use it if the file synchronization service stops working. |

### version

Displays the current installed version

```console
$ okteto version
```
